# TREX-Core

./: main.py  pyproject.toml  setup.py
TREX_Core/: main.py
TREX_Core/configs/: _credentials.json.example  _template.json  citylearn_test.json  citylearn_test3.json
TREX_Core/devices/: Bess.py
TREX_Core/markets/: client.py
TREX_Core/markets/base/: DoubleAuction.py
TREX_Core/mqtt/: base_paho.py
TREX_Core/participants/: Residential.py  base.py  client.py
TREX_Core/runner/: runner.py
TREX_Core/runner/make/: market.py  participant.py
TREX_Core/sim_controller/: client.py  sim_controller.py
TREX_Core/utils/: db_utils.py  records.py
_agent/traders/: basic_trader.py
_clients/participants/: Residential.py
_configs/: 10Houses_QuantPrice_24hPseudoRealistic.json  TB3A-10h.json  TB3A2-10h.json  TB3A3-10h.json  TB3B-10h.json  TB3B2-10h.json  TB3B3-10h.json  TB3C-10h.json  TB6_PPO.json  TB6_Random.json  TB8_PPO_selfConsumption_SingleAgent.json  _credentials.json  hps_search_test.json  sundance_sc10a_greedybase2.json  sundance_sc10a_greedybase2b.json  sundance_sc10a_greedybase_10bess.json  sundance_sc10a_greedybase_sio5.json  test.json
_utils/runner/: runner.py
